--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 .DS_Store
 *.pyc
+*.pddl
+*.qdimacs
+*.result
+*.out*
+*.error*
+*.pdf
+*.log
+*.aux
+*.lof
+*.toc
+*.lot
+*.submit
+*.tar.gz
+*.blg
+*.bbl
+resultsQbf.tex
